// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders FPCard with caption correctly 1`] = `
<div
  className="card"
  style={
    Object {
      "width": "18rem",
    }
  }
>
  <img
    alt=""
    className="card-img-top"
    src="https://picsum.photos/200/300"
  />
  <div
    className="card-body"
  >
    <div
      className="container"
    >
      <div
        className="row"
      >
        <div
          className="col-3"
        >
          <img
            className="rounded-circle"
            src=""
          />
        </div>
        <div
          className="col"
        >
          <div
            className="card-title h5"
          >
            
          </div>
          <div
            className="card-subtitle h6"
          >
            
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders FPCard with text overlay correctly 1`] = `
<div
  className="text-white card"
  style={
    Object {
      "width": "18rem",
    }
  }
>
  <img
    alt=""
    className="card-img-top"
    src="https://picsum.photos/200/300"
  />
  <div
    className="card-img-overlay"
  >
    <div
      className="card-subtitle h6"
    >
      
    </div>
    <div
      className="card-title h5"
    >
      
    </div>
  </div>
</div>
`;
